--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <h1>Welcome to Our Bank</h1>
+        <p>Apply for a debit card now and enjoy exclusive benefits!</p>
+        <a href="signup-page.html" class="cta-button">Apply for Debit Card</a>
+    </div>
 </body>
 </html>
