update CSS class

--- a/signup-page.html
+++ b/signup-page.html
@@ -29,7 +29,7 @@
                 <label for="terms">I agree to the <a href="#">Terms and Conditions</a></label>
             </div>
 
-            <button type="button" id="submit-button" class="submit-ppdc">Submit Application</button>
+            <button type="button" id="submit-button" class="submit-ppdc cta-button">Submit Application</button>
         </form>
     </div>
 </body>
