update PPID field

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Welcome to Our Bank</h1>
         <p>Apply for a debit card now and enjoy exclusive benefits!</p>
-        <button type="button" id="submit-button" class="apply-ppdc cta-button">Apply for PPDC</button>
+        <a href="signup-page.html" class="apply-ppdc cta-button">Apply for Debit Card</a>
     </div>
 </body>
 </html>
