--- a/signup-page.html
+++ b/signup-page.html
@@ -12,7 +12,7 @@
         <h1>Signup for a Debit Card</h1>
         <form id="signup-form">
             <label for="existing-id">Existing ID</label>
-            <input type="text" id="existing-id" name="existing-id" required>
+            <input type="text" id="ppid" name="ppid" required>
 
             <label for="card-type">Choose Type</label>
             <select id="card-type" name="card-type" required>
