add WebSDK script to rest of the pages

--- a/thank-you.html
+++ b/thank-you.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
     <link rel="stylesheet" href="styles.css">
+	<script src="https://assets.adobedtm.com/6d07e8369d1a/5b36e30cba42/launch-21285ff02fdd-development.min.js" async></script>
 </head>
 <body>
     <div class="container">
