--- a/signup-page.html
+++ b/signup-page.html
@@ -6,6 +6,7 @@
     <title>Signup Page</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="scripts.js"></script>
+	<script src="https://assets.adobedtm.com/6d07e8369d1a/5b36e30cba42/launch-21285ff02fdd-development.min.js" async></script>
 </head>
 <body>
     <div class="container">
