update page titles

--- a/signup-page.html
+++ b/signup-page.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Signup for a Debit Card</h1>
+        <h1>Debit card Application Form</h1>
         <form id="ppdc-signup-form">
             <label for="ppid">PPID</label>
             <input type="text" id="ppid" name="ppid" readonly required>
