--- a/login-page.html
+++ b/login-page.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sign In</h1>
+        <h1>Sign-in using existing credentials</h1>
         <form id="signin-form">
             <label for="user-id">User ID (PPID)</label>
             <input type="text" id="user-id" name="user-id" required placeholder="PP123">
