Update PPID on login page

--- a/login-page.html
+++ b/login-page.html
@@ -13,7 +13,7 @@
         <h1>Sign-in using existing credentials</h1>
         <form id="signin-form">
             <label for="user-id">User ID (PPID)</label>
-            <input type="text" id="user-id" name="user-id" required placeholder="PP123">
+            <input type="text" id="ppid" name="ppid" required placeholder="PP123">
 
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required placeholder="Enter your password">
