--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Our Bank</h1>
+        <h1>Welcome to ABC Bank</h1>
         <p>Apply for a debit card now and enjoy exclusive benefits!</p>
         <a href="login-page.html" class="apply-ppdc cta-button">Apply for Debit Card</a>
     </div>
