--- a/signup-page.html
+++ b/signup-page.html
@@ -15,14 +15,14 @@
             <label for="ppid">PPID</label>
             <input type="text" id="ppid" name="ppid" readonly required>
 
-            <label for="card-type">Choose Type</label>
+            <label for="card-type">Choose Card Type</label>
             <select id="card-type" name="card-type" required>
                 <option value="" disabled selected>Select type</option>
                 <option value="silver">Silver</option>
                 <option value="platinum">Platinum</option>
             </select>
 
-            <label for="name">Name</label>
+            <label for="name">Online Signature (Full name)</label>
             <input type="text" id="name" name="name" required>
 
             <div class="checkbox-container">
