remove async load

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <p>Apply for a debit card now and enjoy exclusive benefits!</p>
         <a href="login-page.html" class="apply-ppdc cta-button">Apply for Debit Card</a>
     </div>
+<script type="text/javascript">_satellite.pageBottom();</script>
 </body>
 </html>
