--- a/login-page.html
+++ b/login-page.html
@@ -21,5 +21,6 @@
             <button type="button" id="login-button" class="login-button cta-button">Login</button>
         </form>
     </div>
+<script type="text/javascript">_satellite.pageBottom();</script>
 </body>
 </html>
