for async impl, add pre-hiding script (target)

--- a/thank-you.html
+++ b/thank-you.html
@@ -6,6 +6,13 @@
     <title>Thank You</title>
     <link rel="stylesheet" href="styles.css">
 	<script src="https://assets.adobedtm.com/6d07e8369d1a/5b36e30cba42/launch-21285ff02fdd-development.min.js" async></script>
+	<script>
+  !function(e,a,n,t){var i=e.head;if(i){
+  if (a) return;
+  var o=e.createElement("style");
+  o.id="alloy-prehiding",o.innerText=n,i.appendChild(o),setTimeout(function(){o.parentNode&&o.parentNode.removeChild(o)},t)}}
+  (document, document.location.href.indexOf("adobe_authoring_enabled") !== -1, "body { opacity: 0 !important }", 3000);
+</script>
 </head>
 <body>
     <div class="container">
