--- a/signup-page.html
+++ b/signup-page.html
@@ -14,6 +14,11 @@
   o.id="alloy-prehiding",o.innerText=n,i.appendChild(o),setTimeout(function(){o.parentNode&&o.parentNode.removeChild(o)},t)}}
   (document, document.location.href.indexOf("adobe_authoring_enabled") !== -1, "body { opacity: 0 !important }", 3000);
 </script>
+<script>
+			function targetPageParams() {
+				return "profile.loggedIn=true";
+			}
+</script>
 </head>
 <body>
     <div class="container">
